<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Registro"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="243dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="7dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/imageView2"
            android:text="@string/datos_personales"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="?colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="70dp"
            android:layout_height="47dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="5dp"
            app:srcCompat="@drawable/icon_reg" />
    </RelativeLayout>


    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textSize="15sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/editTextEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edad"
        android:inputType="number"
        android:textSize="15sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/editTextPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/peso"
        android:inputType="numberDecimal"
        android:textSize="15sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/editTextTalla"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:hint="@string/talla"
        android:inputType="numberDecimal"
        android:textSize="15sp"
        android:textStyle="normal" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="276dp"
            android:layout_height="163dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            app:srcCompat="@drawable/imc" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnRegistro1"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="?colorPrimary"
        android:text="@string/btn_registrar"
        android:textSize="20dp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/btnEstadistica1"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="?colorPrimary"
        android:text="@string/btn_presentar"
        android:textSize="20dp"
        android:textStyle="bold" />

</LinearLayout>