<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/Nombre"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="?colorPrimary"
        android:textSize="35sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="362dp"
        app:srcCompat="@drawable/imagenmenu" />

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="?colorPrimary"
        android:text="@string/registro"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnAyuda"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="?colorPrimary"
        android:text="@string/ayudaMenu"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>