<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ayuda"
    android:orientation="vertical"
    android:layout_margin="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="40dp"
            android:text="Ayuda"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="?colorPrimary"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="377dp"
            android:layout_marginBottom="40dp"
            android:text="@string/Titulo"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="259dp"
            android:layout_height="248dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="117dp"
            android:layout_marginEnd="56dp"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            app:srcCompat="@drawable/icon_reg" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="413dp"
            android:layout_marginBottom="20dp"
            android:text="@string/informacion"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnAtras"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:backgroundTint="?colorPrimary"
        android:text="Atras"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icon_reg" />

    <TextView
        android:id="@+id/textViewautor"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="76dp"
        android:text="@string/autor"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</LinearLayout>